Spacing fixes on mobile

--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ body {
 	font-family: "ReplicaMonoLLWeb-Regular", sans-serif;
 	font-size: 16px;
 	color: var(--color-fg-primary);
+	
+	@media (max-width: 1280px) {
+		font-size: 20px;
+	}
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -60,17 +64,18 @@ a:hover {
 .wrapper {
 	width: 35vw;
 	padding: 4em;
-
+	
+	/* MBP 16 */
 	@media (max-width: 1476px) {
 		width: 50vw;
 	}
 
-	  @media (max-width: 1280px) {
+	/* Air */
+	@media (max-width: 1280px) {
 		width: 100vw;
-	  }
+		padding: 2em;
+	}
 }
-
-/* MBP 16 */
 
 
   
